@@ -41,6 +41,17 @@
     -->
 
     <listitem>
+      <para>2024-08-23</para>
+      <itemizedlist>
+        <listitem>
+          <para>[xry111] - Update to lfs-bootscripts-20240823, to fix an
+          issue causing VT 2-6 not affected by the FONT= setting in
+          /etc/sysconfig/console.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2024-08-17</para>
       <itemizedlist>
         <listitem>
